# inventory_system

./: .gitignore  Codebase_Issues_and_Refactoring_Plan.markdown  DATABASE_OPERATIONS.markdown  Mobile-First Table Design Guideline.markdown  RBAC Implementation Roadmap for Steps 6 and 7.markdown  RBAC Implementation Roadmap.markdown  database-operations-guide.markdown  pyproject.toml  rbac_implementation.markdown  reflex_dev_plan.md  requirements.txt  rxconfig.py  user_data.json
alembic/versions/: 12beb1e0f8b8_.py  1646fa0839bb_.py  1fa4c229b239_.py  3297d393cc3f_.py  3a80197213df_.py  9ae969dd9b37_.py
assets/: credentials.xlsx
assets/icons/: profile.png:Zone.Identifier
assets/images/: landing_1.avif  landing_1.avif:Zone.Identifier
inventory_system/: constants.py  inventory_system.py  logging.py  routes.py  styles.py
inventory_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
inventory_system/components/: avatar.py  card.py  comfirmation.py  logout.py  navbar.py  notification.py  permission_category_badge.py  profile_input.py  sidebar.py  status_badge.py
inventory_system/layouts/: auth_layout.py
inventory_system/logging/: audit.py  audit_listeners.py  audit_listeners_fixed.py  audit_setup.py  logging.py
inventory_system/models/: __init__.py  audit.py  user.py
inventory_system/pages/: __init__.py  about.py  admin.py  admin_management.py  index.py  login.py  logout.py  overview.py  profile.py  register.py  settings.py  supplier_approval.py  supplier_register.py  table.py  user_management.py
inventory_system/scripts/: create_admin.py  create_test_users.py  seed_all.py  seed_permissions.py  seed_roles.py
inventory_system/state/: __init__.py  admin_mgmt_state.py  admin_state.py  auth.py  bulk_roles_state.py  login_state.py  logout_state.py  permission_state.py  profile_picture_state.py  profile_state.py  register_state.py  role_data_service.py  role_state.py  supplier_approval_state.py  supplier_register_state.py  supplier_registerstater.py  user_data_service.py  user_mgmt_state.py
inventory_system/templates/: template.py
inventory_system/tests/: test_auth.py  test_permission.py  test_profile.py  test_supplier_reg.py  test_utils.py
inventory_system/tests/state/: test_register_state.py
inventory_system/utils/: convert_user_data.py  register_supplier.py
inventory_system/views/: bulk_operations_tab.py  permission_view.py  role_view.py
venv-inventory/: pyvenv.cfg
