[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory_system"
version = "0.1.0"
requires-python = ">=3.8"
description = "Inventory Management System"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."] # Tells setuptools to look for packages in the root directory 